--- a/server/package.json
+++ b/server/package.json
@@ -12,8 +12,10 @@
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-validator": "^6.15.0",
     "jsonwebtoken": "^9.0.0",
-    "mongoose": "^7.0.1",
+    "mongodb": "^5.1.0",
+    "mongoose": "^6.9.0",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.21"
   }
